[gd_scene load_steps=5 format=3 uid="uid://bsmhycxtja4hj"]

[ext_resource type="Script" path="res://Scripts/UI/session_end.gd" id="1_h60st"]
[ext_resource type="FontFile" uid="uid://bqtl52xy2arj6" path="res://Fonts/superstar_memesbruh03.ttf" id="2_esnat"]
[ext_resource type="Theme" uid="uid://700pymj2stda" path="res://Themes/Button.tres" id="3_crfby"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vtx6u"]
bg_color = Color(0.721569, 0.435294, 0.313726, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.917647, 0.831373, 0.666667, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="SessionEnd" type="CanvasLayer"]
script = ExtResource("1_h60st")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -98.0
offset_right = 200.0
offset_bottom = 102.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vtx6u")

[node name="LessonFinishedLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.0
offset_top = -72.0
offset_right = 135.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_esnat")
theme_override_font_sizes/font_size = 32
text = "Тренировка окончена"

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.0
offset_top = -19.0
offset_right = 54.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_esnat")
theme_override_font_sizes/font_size = 16
text = "Score:"

[node name="MaxScoreLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.0
offset_right = 54.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_esnat")
theme_override_font_sizes/font_size = 16
text = "Max score:"

[node name="RetryBtn" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -172.0
offset_top = 30.0
offset_right = -72.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_crfby")
text = "Заново"

[node name="QuitSessionBtn" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 68.0
offset_top = 30.5
offset_right = 168.0
offset_bottom = 66.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_crfby")
text = "Выход"

[node name="NextSessionBtn" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.5
offset_top = 30.0
offset_right = 50.5
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_crfby")
text = "Далее"

[connection signal="pressed" from="RetryBtn" to="." method="_on_retry_btn_pressed"]
[connection signal="pressed" from="QuitSessionBtn" to="." method="_on_quit_session_btn_pressed"]
[connection signal="pressed" from="NextSessionBtn" to="." method="_on_next_session_btn_pressed"]
